--- a/PaasData/Ex2PassData/PassData2Ex/PassData2Ex/ThirdVC.xib
+++ b/PaasData/Ex2PassData/PassData2Ex/PassData2Ex/ThirdVC.xib
@@ -32,9 +32,8 @@
                         <constraint firstAttribute="width" secondItem="Wfa-R1-aYE" secondAttribute="height" multiplier="21:11" id="yrn-Sn-rth"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4tt-r8-OLG">
-                    <rect key="frame" x="172" y="349" width="48" height="23"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4tt-r8-OLG">
+                    <rect key="frame" x="29.333333333333343" y="334" width="334.33333333333326" height="23"/>
                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="19"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -44,8 +43,11 @@
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="cXY-8a-LVD" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="10" id="6YP-mb-hUo"/>
+                <constraint firstItem="4tt-r8-OLG" firstAttribute="leading" secondItem="Wfa-R1-aYE" secondAttribute="leading" id="7oV-ZP-fLK"/>
                 <constraint firstItem="cXY-8a-LVD" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.2" id="97H-e9-nC2"/>
+                <constraint firstItem="4tt-r8-OLG" firstAttribute="trailing" secondItem="Wfa-R1-aYE" secondAttribute="trailing" id="ArD-a9-W1A"/>
                 <constraint firstItem="Wfa-R1-aYE" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="SO6-Ub-FsP"/>
+                <constraint firstItem="4tt-r8-OLG" firstAttribute="top" secondItem="Wfa-R1-aYE" secondAttribute="bottom" constant="25" id="dw8-dc-RYk"/>
                 <constraint firstItem="Wfa-R1-aYE" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.85" id="ioz-WM-rKW"/>
                 <constraint firstItem="Wfa-R1-aYE" firstAttribute="top" secondItem="cXY-8a-LVD" secondAttribute="bottom" constant="40" id="lw4-vZ-Wro"/>
                 <constraint firstItem="cXY-8a-LVD" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="pUk-vg-MLD"/>
