--- a/PaasData/Ex2PassData/PassData2Ex/PassData2Ex/Base.lproj/Main.storyboard
+++ b/PaasData/Ex2PassData/PassData2Ex/PassData2Ex/Base.lproj/Main.storyboard
@@ -16,8 +16,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="HGD-Dv-iSY">
-                                <rect key="frame" x="0.0" y="103" width="393" height="358"/>
+                            <pageControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="8th-0m-Ux6">
+                                <rect key="frame" x="48" y="527" width="115.66666666666667" height="26"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemMintColor"/>
+                            </pageControl>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="HGD-Dv-iSY">
+                                <rect key="frame" x="0.0" y="103.00000000000003" width="393" height="340.66666666666674"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <inset key="scrollIndicatorInsets" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="0.0" id="aYa-yS-LfB">
@@ -32,10 +37,10 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="HGD-Dv-iSY" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="3kr-4q-ygu"/>
-                            <constraint firstItem="HGD-Dv-iSY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="6uu-FN-9eX"/>
-                            <constraint firstItem="HGD-Dv-iSY" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.42" id="L4a-L3-5IB"/>
-                            <constraint firstItem="HGD-Dv-iSY" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Npz-2L-ENC"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HGD-Dv-iSY" secondAttribute="trailing" id="G0J-gq-pgV"/>
+                            <constraint firstItem="HGD-Dv-iSY" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.4" id="NyG-4i-46a"/>
+                            <constraint firstItem="HGD-Dv-iSY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="dVc-13-UW2"/>
+                            <constraint firstItem="HGD-Dv-iSY" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="tEA-4D-l1q"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="fTr-ec-uO0"/>
@@ -45,7 +50,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1057.2519083969464" y="-27.464788732394368"/>
+            <point key="canvasLocation" x="1055.7251908396945" y="-27.464788732394368"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="rjg-55-ost">
@@ -69,6 +74,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemMintColor">
+            <color red="0.0" green="0.7803921568627451" blue="0.74509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
